# stress-raiser

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
.agents/skills/stress-raiser/: SKILL.md
.agents/skills/stress-raiser/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/commands/: documentation-update-for-architecture-or-workflows.md  feature-development.md  feature-implementation-with-tui-and-stats.md
.claude/homunculus/instincts/inherited/: stress-raiser-instincts.yaml
.claude/skills/stress-raiser/: SKILL.md
.codex/: AGENTS.md
.github/workflows/: release.yml  rust.yml
src/: curl.rs  editor.rs  error.rs  export.rs  history.rs  lib.rs  main.rs  stats.rs
src/tui/: dashboard.rs  form.rs  mod.rs  report.rs
